--- a/yeb-server/pom.xml
+++ b/yeb-server/pom.xml
@@ -57,6 +57,13 @@
       <scope>test</scope>
     </dependency>
 
+    <!-- google kaptcha依赖 -->
+    <dependency>
+        <groupId>com.github.axet</groupId>
+        <artifactId>kaptcha</artifactId>
+        <version>0.0.9</version>
+    </dependency>
+
     <!-- swagger2 依赖 -->
     <dependency>
       <groupId>io.springfox</groupId>
@@ -81,7 +88,6 @@
       <artifactId>jjwt</artifactId>
       <version>0.9.0</version>
     </dependency>
-
 
   </dependencies>
 
